--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: traccar_manager
-description: "A new Flutter project."
+description: "Traccar Manager"
 publish_to: 'none'
 version: 0.1.0
 
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  webview_flutter: ^4.11.0
 
 dev_dependencies:
   flutter_test:
