--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,16 @@
 name: traccar_manager
 description: "Traccar Manager"
 publish_to: 'none'
-version: 0.1.0
+version: 5.0.0+50
 
 environment:
   sdk: ^3.7.2
 
 dependencies:
+  firebase_analytics: ^11.4.5
+  firebase_core: ^3.13.0
+  firebase_crashlytics: ^4.3.5
+  firebase_messaging: ^15.2.5
   flutter:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
