--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   local_auth: ^2.3.0
   shared_preferences: ^2.5.3
+  url_launcher: ^6.3.1
   webview_flutter: ^4.11.0
 
 dev_dependencies:
