--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,11 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
   local_auth: ^2.3.0
+  permission_handler: ^12.0.0+1
   shared_preferences: ^2.5.3
   url_launcher: ^6.3.1
   webview_flutter: ^4.11.0
+  webview_flutter_android: ^4.5.0
 
 dev_dependencies:
   flutter_test:
