--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
+  http: ^1.4.0
   local_auth: ^2.3.0
+  path_provider: ^2.1.5
   permission_handler: ^12.0.0+1
+  share_plus: ^11.0.0
   shared_preferences: ^2.5.3
   url_launcher: ^6.3.1
   webview_flutter: ^4.11.0
