--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,7 @@ dependencies:
   shared_preferences: ^2.5.3
   shared_preferences_android: ^2.4.10
   url_launcher: ^6.3.1
-  webview_flutter: ^4.11.0
-  webview_flutter_android: ^4.5.0
+  flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   flutter_test:
