--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: traccar_manager
 description: "Traccar Manager"
 publish_to: 'none'
-version: 5.1.2+55
+version: 5.1.3+56
 
 environment:
   sdk: ^3.7.2
@@ -14,6 +14,7 @@ dependencies:
   firebase_messaging: ^15.2.7
   flutter:
     sdk: flutter
+  flutter_inappwebview: ^6.1.5
   flutter_secure_storage: ^9.2.4
   http: ^1.4.0
   local_auth: ^2.3.0
@@ -24,8 +25,6 @@ dependencies:
   shared_preferences: ^2.5.3
   shared_preferences_android: ^2.4.10
   url_launcher: ^6.3.1
-  webview_flutter: ^4.11.0
-  webview_flutter_android: ^4.5.0
 
 dev_dependencies:
   flutter_test:
