--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   url_launcher: ^6.3.1
   webview_flutter: ^4.11.0
   webview_flutter_android: ^4.5.0
+  webview_flutter_wkwebview: ^3.22.0
 
 dev_dependencies:
   flutter_test:
