--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_messaging: ^16.1.1
   flutter:
     sdk: flutter
+  flutter_inappwebview: ^6.1.4
   flutter_secure_storage: ^10.0.0
   http: ^1.6.0
   local_auth: ^3.0.0
@@ -24,9 +25,6 @@ dependencies:
   shared_preferences: ^2.5.4
   shared_preferences_android: ^2.4.20
   url_launcher: ^6.3.2
-  webview_flutter: ^4.13.1
-  webview_flutter_android: ^4.10.11
-  webview_flutter_wkwebview: ^3.23.5
 
 dev_dependencies:
   flutter_test:
